// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`black renders correctly 1`] = `
<section
  data-component="promo/promofeaturedmedia"
  id="Promo Featured Media"
>
  <div
    class="lg:mx-auto md:max-w-screen-lg theme-black bg-theme-bg"
  >
    <div
      class="section-grid grid grid-cols-2 md:grid-cols-12 px-m gap-s md:gap-s"
    >
      <div
        class="order-first col-span-12"
      >
        <div
          class="relative hidden md:block aspect-video   "
        >
          <span
            style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative;"
          >
            <span
              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 42.857142857142854% 0px 0px 0px;"
            />
            <img
              alt="Unsplash Source"
              data-nimg="responsive"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
            <noscript />
          </span>
        </div>
        <div
          class="relative w-full md:hidden"
        >
          <span
            style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative;"
          >
            <span
              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 42.857142857142854% 0px 0px 0px;"
            />
            <img
              alt="Unsplash Source"
              data-nimg="responsive"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%; object-fit: cover; object-position: center;"
            />
            <noscript />
          </span>
        </div>
        <div
          class="caption"
        >
          <div
            class="text-theme-text ml:text-secondary mt-xxs italic text-left mb-s font-sans text-sm-xxs md:text-caption"
          >
            Description of product with 
            <a
              href="google.com"
            >
              link
            </a>
          </div>
        </div>
      </div>
      <div
        class="col-span-9 my-auto mt-0 flex flex-col self-center px-xl py-s pr-xxl"
      >
        <div
          class="font-sans text-theme-text text-small uppercase font-bold mb-2"
        >
          <h3>
            Featured Media Sub Heading Text
          </h3>
        </div>
        <div
          class="text-theme-body mb-4"
        >
          <div
            class="body-copy"
          >
            <div>
              Description of product with 
              <a
                href="google.com"
              >
                link
              </a>
            </div>
          </div>
        </div>
        <div>
          <div
            class="items-top font-sans  text-theme-text text-xs font-heavy mb-2"
          >
            <h3>
              Featured Media Headline Text
            </h3>
          </div>
          <div
            class="text-theme-body mb-4"
          >
            <div
              class="body-copy"
            >
              <div>
                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut semper, justo eget vehicula vestibulum, enim enim suscipit lectus, et sagittis nibh risus vel metus. Quisque eu ornare ante, et gravida mauris.
              </div>
            </div>
          </div>
          <div
            class="col-span-12 flex flex-col lg:flex-row items-start text-xs font-heavy mb-s flex items-start md:flex-row md:items-center md:space-x-4"
          >
            <a
              class="flex w-fit items-center whitespace-nowrap font-sans text-text-link font-heavy text-theme-text hover:underline hover:decoration-secondary hover:underline-offset-8 disabled:border-gray disabled:text-gray lg:mr-3 lg:first:ml-0 lg:last:mr-0 bg-theme-bg mr-m"
              href="/"
              rel="noopener noreferrer"
              role="link"
              tabindex="0"
              target="_blank"
              title=""
            >
              Learn More
              <span
                class="ml-xxs"
              />
              <span
                class="sr-only"
              >
                 (Opens in a new tab)
              </span>
            </a>
          </div>
        </div>
      </div>
      <div
        class="col-span-3 my-auto mt-0 flex flex-col self-center px-l py-s pr-xl"
      >
        <div
          class=""
        >
          <div
            class="text-theme-text text-small uppercase font-bold py-2 border-gray border-t"
          >
            <h3>
              Highlight One
            </h3>
          </div>
          <div
            class="body-copy"
          >
            <div
              class="text-theme-body text-small mb-m"
            >
              Lorem ipsum
            </div>
          </div>
        </div>
        <div
          class=""
        >
          <div
            class="text-theme-text text-small uppercase font-bold py-2 border-gray border-t"
          >
            <h3>
              Highlight Two
            </h3>
          </div>
          <div
            class="body-copy"
          >
            <div
              class="text-theme-body text-small mb-m"
            >
              Lorem ipsum
            </div>
          </div>
        </div>
        <div
          class=""
        >
          <div
            class="text-theme-text text-small uppercase font-bold py-2 border-gray border-t"
          >
            <h3>
              Highlight Three
            </h3>
          </div>
          <div
            class="body-copy"
          >
            <div
              class="text-theme-body text-small mb-m"
            >
              Lorem ipsum
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`gray renders correctly 1`] = `
<section
  data-component="promo/promofeaturedmedia"
  id="Promo Featured Media"
>
  <div
    class="lg:mx-auto md:max-w-screen-lg theme-gray bg-light-gray"
  >
    <div
      class="section-grid grid grid-cols-2 md:grid-cols-12 px-m gap-s md:gap-s"
    >
      <div
        class="order-first col-span-12"
      >
        <div
          class="relative hidden md:block aspect-video   "
        >
          <span
            style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative;"
          >
            <span
              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 42.857142857142854% 0px 0px 0px;"
            />
            <img
              alt="Unsplash Source"
              data-nimg="responsive"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
            <noscript />
          </span>
        </div>
        <div
          class="relative w-full md:hidden"
        >
          <span
            style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative;"
          >
            <span
              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 42.857142857142854% 0px 0px 0px;"
            />
            <img
              alt="Unsplash Source"
              data-nimg="responsive"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%; object-fit: cover; object-position: center;"
            />
            <noscript />
          </span>
        </div>
        <div
          class="caption"
        >
          <div
            class="text-theme-text ml:text-secondary mt-xxs italic text-left mb-s font-sans text-sm-xxs md:text-caption"
          >
            Description of product with 
            <a
              href="google.com"
            >
              link
            </a>
          </div>
        </div>
      </div>
      <div
        class="col-span-9 my-auto mt-0 flex flex-col self-center px-xl py-s pr-xxl"
      >
        <div
          class="font-sans text-theme-text text-small uppercase font-bold mb-2"
        >
          <h3>
            Featured Media Sub Heading Text
          </h3>
        </div>
        <div
          class="text-theme-body mb-4"
        >
          <div
            class="body-copy"
          >
            <div>
              Description of product with 
              <a
                href="google.com"
              >
                link
              </a>
            </div>
          </div>
        </div>
        <div>
          <div
            class="items-top font-sans  text-theme-text text-xs font-heavy mb-2"
          >
            <h3>
              Featured Media Headline Text
            </h3>
          </div>
          <div
            class="text-theme-body mb-4"
          >
            <div
              class="body-copy"
            >
              <div>
                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut semper, justo eget vehicula vestibulum, enim enim suscipit lectus, et sagittis nibh risus vel metus. Quisque eu ornare ante, et gravida mauris.
              </div>
            </div>
          </div>
          <div
            class="col-span-12 flex flex-col lg:flex-row items-start text-xs font-heavy mb-s flex items-start md:flex-row md:items-center md:space-x-4"
          >
            <a
              class="flex w-fit items-center whitespace-nowrap font-sans text-text-link font-heavy text-theme-text hover:underline hover:decoration-secondary hover:underline-offset-8 disabled:border-gray disabled:text-gray lg:mr-3 lg:first:ml-0 lg:last:mr-0 bg-theme-bg mr-m"
              href="/"
              role="link"
              tabindex="0"
              target="_blank"
              title=""
            >
              Learn More
              <span
                class="ml-xxs"
              />
              <span
                class="sr-only"
              >
                 (Opens in a new tab)
              </span>
            </a>
          </div>
        </div>
      </div>
      <div
        class="col-span-3 my-auto mt-0 flex flex-col self-center px-l py-s pr-xl"
      >
        <div
          class=""
        >
          <div
            class="text-theme-text text-small uppercase font-bold py-2 border-gray border-t"
          >
            <h3>
              Highlight One
            </h3>
          </div>
          <div
            class="body-copy"
          >
            <div
              class="text-theme-body text-small mb-m"
            >
              Lorem ipsum
            </div>
          </div>
        </div>
        <div
          class=""
        >
          <div
            class="text-theme-text text-small uppercase font-bold py-2 border-gray border-t"
          >
            <h3>
              Highlight Two
            </h3>
          </div>
          <div
            class="body-copy"
          >
            <div
              class="text-theme-body text-small mb-m"
            >
              Lorem ipsum
            </div>
          </div>
        </div>
        <div
          class=""
        >
          <div
            class="text-theme-text text-small uppercase font-bold py-2 border-gray border-t"
          >
            <h3>
              Highlight Three
            </h3>
          </div>
          <div
            class="body-copy"
          >
            <div
              class="text-theme-body text-small mb-m"
            >
              Lorem ipsum
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`renders correctly 1`] = `
<section
  data-component="promo/promofeaturedmedia"
  id="Promo Featured Media"
>
  <div
    class="lg:mx-auto md:max-w-screen-lg theme-white"
  >
    <div
      class="section-grid grid grid-cols-2 md:grid-cols-12 px-m gap-s md:gap-s"
    >
      <div
        class="order-first col-span-12"
      >
        <div
          class="relative hidden md:block aspect-video   "
        >
          <span
            style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative;"
          >
            <span
              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 42.857142857142854% 0px 0px 0px;"
            />
            <img
              alt="Unsplash Source"
              data-nimg="responsive"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
            <noscript />
          </span>
        </div>
        <div
          class="relative w-full md:hidden"
        >
          <span
            style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative;"
          >
            <span
              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 42.857142857142854% 0px 0px 0px;"
            />
            <img
              alt="Unsplash Source"
              data-nimg="responsive"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%; object-fit: cover; object-position: center;"
            />
            <noscript />
          </span>
        </div>
        <div
          class="caption"
        >
          <div
            class="text-theme-text ml:text-secondary mt-xxs italic text-left mb-s font-sans text-sm-xxs md:text-caption"
          >
            Description of product with 
            <a
              href="google.com"
            >
              link
            </a>
          </div>
        </div>
      </div>
      <div
        class="col-span-9 my-auto mt-0 flex flex-col self-center px-xl py-s pr-xxl"
      >
        <div
          class="font-sans text-theme-text text-small uppercase font-bold mb-2"
        >
          <h3>
            Featured Media Sub Heading Text
          </h3>
        </div>
        <div
          class="text-theme-body mb-4"
        >
          <div
            class="body-copy"
          >
            <div>
              Description of product with 
              <a
                href="google.com"
              >
                link
              </a>
            </div>
          </div>
        </div>
        <div>
          <div
            class="items-top font-sans  text-theme-text text-xs font-heavy mb-2"
          >
            <h3>
              Featured Media Headline Text
            </h3>
          </div>
          <div
            class="text-theme-body mb-4"
          >
            <div
              class="body-copy"
            >
              <div>
                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut semper, justo eget vehicula vestibulum, enim enim suscipit lectus, et sagittis nibh risus vel metus. Quisque eu ornare ante, et gravida mauris.
              </div>
            </div>
          </div>
          <div
            class="col-span-12 flex flex-col lg:flex-row items-start text-xs font-heavy mb-s flex items-start md:flex-row md:items-center md:space-x-4"
          >
            <a
              class="flex w-fit items-center whitespace-nowrap font-sans text-text-link font-heavy text-theme-text hover:underline hover:decoration-secondary hover:underline-offset-8 disabled:border-gray disabled:text-gray lg:mr-3 lg:first:ml-0 lg:last:mr-0 bg-theme-bg mr-m"
              href="/"
              role="link"
              tabindex="0"
              target="_blank"
              title=""
            >
              Learn More
              <span
                class="ml-xxs"
              />
              <span
                class="sr-only"
              >
                 (Opens in a new tab)
              </span>
            </a>
          </div>
        </div>
      </div>
      <div
        class="col-span-3 my-auto mt-0 flex flex-col self-center px-l py-s pr-xl"
      >
        <div
          class=""
        >
          <div
            class="text-theme-text text-small uppercase font-bold py-2 border-gray border-t"
          >
            <h3>
              Highlight One
            </h3>
          </div>
          <div
            class="body-copy"
          >
            <div
              class="text-theme-body text-small mb-m"
            >
              Lorem ipsum
            </div>
          </div>
        </div>
        <div
          class=""
        >
          <div
            class="text-theme-text text-small uppercase font-bold py-2 border-gray border-t"
          >
            <h3>
              Highlight Two
            </h3>
          </div>
          <div
            class="body-copy"
          >
            <div
              class="text-theme-body text-small mb-m"
            >
              Lorem ipsum
            </div>
          </div>
        </div>
        <div
          class=""
        >
          <div
            class="text-theme-text text-small uppercase font-bold py-2 border-gray border-t"
          >
            <h3>
              Highlight Three
            </h3>
          </div>
          <div
            class="body-copy"
          >
            <div
              class="text-theme-body text-small mb-m"
            >
              Lorem ipsum
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`video renders correctly 1`] = `
<section
  data-component="promo/promofeaturedmedia"
  id="Promo Featured Media"
>
  <div
    class="lg:mx-auto md:max-w-screen-lg theme-white"
  >
    <div
      class="section-grid grid grid-cols-2 md:grid-cols-12 px-m gap-s md:gap-s"
    >
      <div
        class="order-first col-span-12"
      >
        <div
          style="position: relative; overflow: hidden; width: 100%; padding-top: 56.25%;"
        >
          <iframe
            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
            allowfullscreen=""
            id="YWkfIwORD-M"
            loading="lazy"
            name="ytwrapper"
            src="https://www.youtube.com/embed/YWkfIwORD-M?enablejsapi=1&loop=1&controls=1&autoplay=0&disablekb=0&modestbranding=0&mute=true&playlist=YWkfIwORD-M"
            style="position: absolute; top: 0px; left: 0px; right: 0px; bottom: 0px; width: 100%; height: 100%;"
            title="Youtube Video"
          />
        </div>
      </div>
      <div
        class="col-span-9 my-auto mt-0 flex flex-col self-center px-xl py-s pr-xxl"
      >
        <div
          class="font-sans text-theme-text text-small uppercase font-bold mb-2"
        >
          <h3>
            Featured Media Sub Heading Text
          </h3>
        </div>
        <div
          class="text-theme-body mb-4"
        >
          <div
            class="body-copy"
          >
            <div>
              Description of product with 
              <a
                href="google.com"
              >
                link
              </a>
            </div>
          </div>
        </div>
        <div>
          <div
            class="items-top font-sans  text-theme-text text-xs font-heavy mb-2"
          >
            <h3>
              Featured Media Headline Text
            </h3>
          </div>
          <div
            class="text-theme-body mb-4"
          >
            <div
              class="body-copy"
            >
              <div>
                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut semper, justo eget vehicula vestibulum, enim enim suscipit lectus, et sagittis nibh risus vel metus. Quisque eu ornare ante, et gravida mauris.
              </div>
            </div>
          </div>
          <div
            class="col-span-12 flex flex-col lg:flex-row items-start text-xs font-heavy mb-s flex items-start md:flex-row md:items-center md:space-x-4"
          >
            <a
              class="flex w-fit items-center whitespace-nowrap font-sans text-text-link font-heavy text-theme-text hover:underline hover:decoration-secondary hover:underline-offset-8 disabled:border-gray disabled:text-gray lg:mr-3 lg:first:ml-0 lg:last:mr-0 bg-theme-bg mr-m"
              href="/"
              rel="noopener noreferrer"
              role="link"
              tabindex="0"
              target="_blank"
              title=""
            >
              Learn More
              <span
                class="ml-xxs"
              />
              <span
                class="sr-only"
              >
                 (Opens in a new tab)
              </span>
            </a>
          </div>
        </div>
      </div>
      <div
        class="col-span-3 my-auto mt-0 flex flex-col self-center px-l py-s pr-xl"
      >
        <div
          class=""
        >
          <div
            class="text-theme-text text-small uppercase font-bold py-2 border-gray border-t"
          >
            <h3>
              Highlight One
            </h3>
          </div>
          <div
            class="body-copy"
          >
            <div
              class="text-theme-body text-small mb-m"
            >
              Lorem ipsum
            </div>
          </div>
        </div>
        <div
          class=""
        >
          <div
            class="text-theme-text text-small uppercase font-bold py-2 border-gray border-t"
          >
            <h3>
              Highlight Two
            </h3>
          </div>
          <div
            class="body-copy"
          >
            <div
              class="text-theme-body text-small mb-m"
            >
              Lorem ipsum
            </div>
          </div>
        </div>
        <div
          class=""
        >
          <div
            class="text-theme-text text-small uppercase font-bold py-2 border-gray border-t"
          >
            <h3>
              Highlight Three
            </h3>
          </div>
          <div
            class="body-copy"
          >
            <div
              class="text-theme-body text-small mb-m"
            >
              Lorem ipsum
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;
